@@ -32,6 +32,7 @@ cod-tools (2.3)
     - COD::CIF::Data::Check:
       - modifying the check_author_names() subroutine to no longer raise
         warnings about missing _publ_author_name data items.
+      - check_bibliography() treats data items with values '?' as unknown.
     - COD::CIF::Data::CIF2COD:
       - the module no longer returns empty strings instead of NULL values
         for the author and title fields;
